--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "next": "12.1.6",
     "pg": "^8.7.3",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
     "@types/pg": "^8.6.5",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.6.4"
